--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 	</div>
 	
 	<div class="section2">
-		<p>クリップパスを使うと、このように変更することができます。</p>
+		<p>クリップパスを使うと、このように要素自体の形状を変更することができます。<br>要素の形状が変わるので、はみ出た部分は隠れてしまいます。</p>
+	</div>
+	
+	<div class="section3">
+		<p>クリップパスは要素の形状を変更するため、次の要素との間に隙間ができるので工夫が必要です。ウェブサイトの表現方法が広がりますが、上手くレイアウトするには色々と試行錯誤が必要です。</p>
 	</div>
 	
 	
